--- a/templates/mostrar_daños.html
+++ b/templates/mostrar_daños.html
@@ -23,10 +23,10 @@
       <h3>Características</h3>
       <p>Caracteristicas respecto los daños que se han detectado</p>
       <ul>
-        <li>Tamaño de la imagen: {{tamaño}}</li>
-        <li>Cantidad de zona no dañada: {{zona_no_dañada}}</li>
-        <li>Cantidad de zona dañada: {{zona_dañada}}</li>
-        <li>Porcentaje que presenta de daños: {{porcentaje}}%</li>
+        <li>Área del lienzo: {{tamaño}} píxeles<sup>2</sup></li>
+        <li>Área no dañada: {{zona_no_dañada}} píxeles<sup>2</sup></li>
+        <li>Área dañada: {{zona_dañada}} píxeles<sup>2</sup></li>
+        <li>Porcentaje de daño: {{porcentaje}}%</li>
       </ul>
     </div>
 
